@@ -1,5 +1,15 @@
 2022-02-27  Antoine Quint  <graouts@webkit.org>
 
+        [svg] flood-opacity should be clamped to the [0,1] range
+        https://bugs.webkit.org/show_bug.cgi?id=237253
+
+        Reviewed by Dean Jackson.
+
+        * rendering/style/SVGRenderStyle.h:
+        (WebCore::SVGRenderStyle::setFloodOpacity):
+
+2022-02-27  Antoine Quint  <graouts@webkit.org>
+
         [svg] stroke-opacity should be clamped to the [0,1] range
         https://bugs.webkit.org/show_bug.cgi?id=237254
 
